# chatGPT-rust

./: Cargo.toml  readme.MD
src/: main.rs
