[package]
name = "chatGPT-rust"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hyper = { version = "^0.14", features = ["full"] }
hyper-tls = "^0.5 " #provides http connector
tokio = { version = "^1.0 ", features = ["full"] } # runtime for writing reliable synchronous features
serde = { version = "^1.0" } #serialization/ deserialization to and from json
serde_derive = "^1.0" #macro for deriving serde::Serialize and serde::decerialize
serde_json = "^1.0" #for converting to and from json
spinners = "^2.0" #displaying a spinner while waiting gor response from the API
dotenv = "0.15.0" # loading env variables from .env file